--- a/public/global.css
+++ b/public/global.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
 	position: relative;
 	width: 100%;
 	height: 100%;
@@ -9,11 +10,12 @@ body {
 	margin: 0;
 	padding: 8px;
 	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue',
+		sans-serif;
 }
 
 a {
-	color: rgb(0,100,200);
+	color: rgb(0, 100, 200);
 	text-decoration: none;
 }
 
@@ -22,14 +24,17 @@ a:hover {
 }
 
 a:visited {
-	color: rgb(0,80,160);
+	color: rgb(0, 80, 160);
 }
 
 label {
 	display: block;
 }
 
-input, button, select, textarea {
+input,
+button,
+select,
+textarea {
 	font-family: inherit;
 	font-size: inherit;
 	-webkit-padding: 0.4em 0;
@@ -60,4 +65,29 @@ button:not(:disabled):active {
 
 button:focus {
 	border-color: #666;
+}
+
+.hidden {
+	display: none !important;
+}
+
+#installContainer {
+	position: absolute;
+	top: 1em;
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	z-index: 10;
+}
+
+#installContainer button {
+	background-color: green;
+	border: 1px solid white;
+	color: white;
+	font-size: 1em;
+	padding: 0.75em;
+}
+
+#installContainer button:hover {
+	background-color: lightGreen;
 }
